OTPV2 Changes
Updated to otpv2